<resources>
    <string name="app_name">Smart Photo Organizer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="cleanup">Cleanup</string>
    <string name="albums">Albums</string>
    <string name="photos">Photos</string>
    <string name="title_photos">PHOTOS</string>
    <string name="title_albums">ALBUMS</string>
    <string name="title_cleanup">CLEANUP</string>
    <string name="title_settings">SETTINGS</string>
    <string name="similar_photos">Similar Photos</string>
    <string name="auto_albums">Auto Albums</string>
    <string name="create_auto_albums">Create Auto Albums</string>
    <string name="auto_album_desc">Automatically group photos by date and location.</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="notification_permission_granted">Notification permission granted!</string>
    <string name="notification_permission_denied">Notification permission denied!</string>
    <string name="permission_storage_switched">Please remove storage permissions in app settings</string>
    <string name="app_language">App Language</string>
    <string name="permissions">Permissions</string>
    <string name="auto_cleanup">Auto Cleanup</string>
    <string name="auto_similar_photos">Similar Photos</string>
    <string name="blurred_photos">Blurred Photos</string>
    <string name="folder1">Similar Photos</string>
    <string name="folder2">Blurred Photos</string>
    <string name="folder3">Create Auto Albums</string>
    <string name="similar_album">Similar</string>
    <string name="albumTitleDate">Sort by Date</string>
    <string name="albumTitleNature">🌿 Nature Photographs</string>
    <string name="albumTitleFood">🍎 Food Photos</string>
    <string name="albumTitleVehicle">"🚗 Vehicles"</string>">
    <string name="albumTitleTech">💻 Technology</string>
    <string name="albumTitleSport">⚽ Sport Photos</string>
    <string name="photo">Photos</string>
    <string name="info_loading">Photographs are being identified...</string>
    <string name="permissionDenied">Permission Denied. Please allow in Settings.</string>
    <string name="selectAll">Select All</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="clnComplete">Cleaning is complete!</string>
    <string name="freedUp">space was successfully freed up</string>
    <string name="info">Information</string>
</resources>

