<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_photos">

    <fragment
        android:id="@+id/navigation_photos"
        android:name="com.example.smart_photo_organizer.fragments.PhotosFragment"
        android:label="@string/title_photos"
        tools:layout="@layout/fragment_photos" />

    <fragment
        android:id="@+id/navigation_albums"
        android:name="com.example.smart_photo_organizer.fragments.AlbumsFragment"
        android:label="@string/title_albums"
        tools:layout="@layout/fragment_albums" />

    <fragment
        android:id="@+id/navigation_cleanup"
        android:name="com.example.smart_photo_organizer.fragments.CleanupFragment"
        android:label="@string/title_cleanup"
        tools:layout="@layout/fragment_cleanup" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.smart_photo_organizer.fragments.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>