<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/photosGridView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E8E8E8">

    <!-- TOP BAR -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/topBar"
        android:orientation="horizontal"
        android:padding="12dp"
        android:gravity="center_vertical">

        <CheckBox
            android:id="@+id/cbSelectAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectAll"
            android:textColor="@color/black" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:visibility="gone"
            android:layout_marginStart="8dp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- GRID -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerGrid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="2dp"
        android:clipToPadding="false" />

</LinearLayout>
